--- a/BatallaNavalgo/build.xml
+++ b/BatallaNavalgo/build.xml
@@ -45,7 +45,7 @@
 				</fileset>
 			</classpath>
 			<formatter type="xml" />
-			<batchtest fork="yes">
+			<batchtest fork="yes" todir="${report.dir}">
 				<fileset dir="${build.dir}" includes="**/*Test.class" />
 			</batchtest>
 		</junit>
